syntax = "proto3";

option go_package = "server/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package snowcast;

service Snowcast {
      rpc Listen (UserInfo) returns (stream Notification) {}
      rpc SendMessage (Message) returns (google.protobuf.Empty) {}
      rpc FetchMessages (FetchRequest) returns (Messages) {}
      rpc SendFile (stream FileChunk) returns (google.protobuf.Empty) {}
      rpc FetchFile (FileRequest) returns (stream FileChunk) {}
}

message UserInfo {
      string userId = 1;
}

enum NotificationType {
      MESSAGE = 0;
      FILE = 1;
}

message Notification {
      NotificationType type = 1;
      optional int32 latestMsg = 2;
      optional string fileId = 3;
}

message Message {
      string userId = 1;
      string message = 2;
      google.protobuf.Timestamp time = 3;
}

message FetchRequest {
      int32 startIndex = 1;
}

message Messages {
      repeated Message messages = 1;
}

message FileChunk {
      string fileName = 1;
      bytes chunk = 2;
}

message FileRequest {
      string fileId = 1;
}